projects/Media/docroot/assets/css/global/selfCredit.css
/* ... */
.selfcredit-overlay.overlay-fullscreen .form-instructions-aria-trigger {
  color: #444;
}

.selfcredit-overlay.overlay-fullscreen .form-instructions {
  background: #444;
  color: white;
  font-size: 15px;
  text-align: right;
  height: 0;
  pointer-events: none;
}

.selfcredit-overlay.overlay-fullscreen .button-triangle-container {
  position: relative;
  display: inline-block;
}

.selfcredit-overlay.overlay-fullscreen .button-triangle::before {
  content: "";
  display: block;
  position: absolute;
  width: 0;
  height: 0;
  top: -15px;
  left: 50%;
  left: calc(50% - 12px);
  border: none;
  border-left: 12px solid transparent;
  border-right: 12px solid transparent;
  border-top: 13.2px solid #444;
}

.selfcredit-overlay .comment-field-animate {
  transform-origin: center;
  animation: animatecomment 0.3s linear;
}

@keyframes animatecomment {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.02);
  }
  100% {
    transform: scale(1);
  }
}

.selfcredit-overlay .self-credit-comment-info .hide {
  display: none;
}

.selfcredit-overlay .self-credit-comment-info label {
  display: block;
}

.selfcredit-overlay .self-credit-comment-info {
  margin-bottom: 26px;
}

.selfcredit-overlay .self-credit-comment-info button {
  background: none;
  border: none;
  color: #408244;
  cursor: pointer;
  font-size: 14px;
  padding: 0;
  text-decoration: none;
}

.selfcredit-overlay .self-credit-comment-info button:hover {
  color: #5fb069;
  text-decoration: underline;
}

.selfcredit-overlay .self-credit-comment-info .self-credit-comment-container {
  margin: 12px 0;
}
.selfcredit-overlay
  .self-credit-comment-info
  .self-credit-comment-container
  label {
  display: inline-block;
}
.selfcredit-overlay
  .self-credit-comment-info
  .self-credit-comment-container
  textarea {
  resize: none;
  width: 100%;
}

.selfcredit-overlay .text-area-length-display {
  font-size: 14px;
}

.selfcredit-overlay .button-triangle-container {
  position: relative;
  display: inline-block;
}

@media screen and (max-width: 740px) {
  .selfcredit-overlay .button-triangle-container {
    padding: 17px 20px 8px;
  }
  
  .cssbutton.button-triangle {
    position: relative;
    top: -3px;
  }
}

.selfcredit-overlay .button-triangle::before {
  content: "";
  display: block;
  position: absolute;
  width: 0;
  height: 0;
  top: -15px;
  left: 50%;
  left: calc(50% - 12px);
  border: none;
  border-left: 12px solid transparent;
  border-right: 12px solid transparent;
  border-top: 13.2px solid #444;
}

.selfcredit-overlay .form-field-info-flag {
  float: right;
  color: #999;
}

.order-line {
  display: flex;
  flex-direction: row;
  margin: 16px 0;
}
.order-line .order-line-col {
  display: flex;
  flex-direction: row;
  align-items: center;
  flex: 1 1 auto;
}
.order-line .order-line-product-image {
  height: 70px;
  flex: 0 0 70px;
  margin-right: 12px;
}
.order-line .order-line-product-image img {
  max-width: 100%;
  max-height: 100%;
}
.order-line .order-line-product {
  flex-basis: 50%;
  font-size: 14px;
}
.order-line .order-line-product label {
  font-weight: bold;
}
.order-line .order-line-product .product-desc,
.order-line .order-line-product .sale-unit {
  letter-spacing: 0.2px;
  color: #333333;
}
.order-line .order-line-product .sale-unit, .complaint-info .sale-unit {
  font-size: 12px;
  text-transform: lowercase;
}
.order-line .order-line-reason {
  margin: 0 15px;
  flex-basis: 35%;
}

.order-line-reason .select-wrapper, .order-line-qty .select-wrapper {
  width: 100%;
}

.order-line-reason .select-wrapper:after, .order-line-qty .select-wrapper:after {
  top: 10px;
  font-size: 14px;
}

@media screen and (max-width: 500px) {
  .order-line-reason .select-wrapper:after, .order-line-qty .select-wrapper:after {
    top: 7px;
  }
}

.order-line .order-line-qty {
  flex-basis: 7%;
}
.order-line .disable-order-line {
  margin: 0 15px;
  flex-basis: 50%;
}
.order-line .disable-order-line .title {
  background-color: #f4f4f4;
  border-radius: 6px;
  color: #666666;
  font-family: "Verdana", sans-serif;
  font-size: 16px;
  height: 34px;
  letter-spacing: 0.4px;
  line-height: 34px;
  text-align: center;
  width: 100%;
}

.selectButton.orderselect {
  width: 100%;
  position: relative;
}

.selectButton.orderselect::after {
  display: inline-block;
  position: absolute;
  margin: auto;
  top: 0;
  bottom: 0;
  right: 1em;
  height: 1.2em;
}

.selectButton.orderselect > span {
  width: 100%;
}

@media screen and (max-width: 740px) {
  .order-line {
    flex-wrap: wrap;
    margin: 40px 0;
  }
  div.order-line:first-child {
    margin-top: 30px;
  }
  .order-line .order-line-product {
    flex-basis: calc(100%-75px);
    margin-bottom: 20px;
  }
  .order-line .order-line-reason {
    margin: 0;
    padding: 0 15px 0 0;
    box-sizing: border-box;
    flex-basis: 75%;
  }
  .order-line .order-line-qty {
    flex-basis: 25%;
  }
  .order-line .disable-order-line {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    flex-basis: 100%;
  }
  .overlay.overlay-fullscreen .overlay-container .overlay-header-helper {
    padding: 0 14px;
  }
}

.overlay.overlay-fullscreen .overlay-container .overlay-header-helper .fd-logo {
  display: none;
}

